--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
+    "swiper": "^6.6.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
